--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,34 +32,6 @@ jobs:
     runs-on: [self-hosted]
     
     steps:
-    - name: Project publish
-      run: dotnet publish -c Release Offline-CDN\Offline-CDN.csproj -o ${{env.DOTNET_ROOT}}/Offline-CDN
-
     - name: Deploy to IIS
-      run: |
-        # if ((Get-WebSiteState -Name AspNetCoreAPI).Value -eq "Started")
-        # {
-        #     Stop-WebSite -Name AspNetCoreAPI
-        #     echo "Stopped Website AspNetCoreAPI"
-        # }
-        # if ((Get-WebAppPoolState -Name AspNetCoreAPI).Value -eq "Started")
-        # {
-        #     Stop-WebAppPool -Name AspNetCoreAPI
-        #     echo "Stopped Application Pool AspNetCoreAPI"
-        # }
-        
-        # Start-Sleep -s 15        
-        Copy-Item ${{env.DOTNET_ROOT}}/Offline-CDN/* C:\Users\Romit\Documents\Deployments\Offline-CDN -Recurse -Force
-        
-        # if ((Get-WebSiteState -Name AspNetCoreAPI).Value -eq "Stopped")
-        # {
-        #     Start-WebSite -Name AspNetCoreAPI
-        #     echo "Started Website AspNetCoreAPI"
-        # }
-        # if ((Get-WebAppPoolState -Name AspNetCoreAPI).Value -eq "Stopped")
-        # {
-        #     Start-WebAppPool -Name AspNetCoreAPI
-        #     echo "Started Application Pool AspNetCoreAPI"
-        # }
-        
-        if ($lastexitcode -lt 8) { $global:lastexitcode = 0 }
+      run: Copy-Item ${{env.DOTNET_ROOT}}/Offline-CDN/* C:\Users\Romit\Documents\Deployments\Offline-CDN -Recurse -Force
+
