--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       run: nuget restore Offline-CDN.sln
     
     - name: Build solution
-      run: msbuild Offline-CDN.sln -t:rebuild -property:Configuration=Release -p:DeployOnBuild=true -p:WebPublishMethod=Package -p:PackageAsSingleFile=true -p:SkipInvalidConfigurations=true -p:PackageLocation="${{ github.workspace }}/deploy"
+      run: msbuild Offline-CDN.sln -t:rebuild -property:Configuration=Release -p:DeployOnBuild=true -p:WebPublishMethod=Package -p:SkipInvalidConfigurations=true -p:PackageLocation="${{ github.workspace }}/deploy"
 
   deploy:
     needs: build
@@ -34,4 +34,5 @@ jobs:
     
     steps:    
     - name: Deploy to IIS
-      run: Expand-Archive -Path '${{ github.workspace }}/deploy/Offline-CDN.zip' -DestinationPath 'C:\Users\Romit\Documents\Deployments\Offline-CDN'
+      # run: Expand-Archive -Path '${{ github.workspace }}/deploy/Offline-CDN' -DestinationPath 'C:\Users\Romit\Documents\Deployments\Offline-CDN'
+      run: Copy-Item ${{ github.workspace }}/deploy/Offline-CDN/* C:\Users\Romit\Documents\Deployments\Offline-CDN -Recurse -Force
