--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
       run: nuget restore Offline-CDN.sln
     
     - name: Build solution
-      run: msbuild Offline-CDN.sln -t:rebuild -property:Configuration=Release -p:DeployOnBuild=true -p:WebPublishMethod=Package -p:SkipInvalidConfigurations=true -p:PackageLocation="${{ github.workspace }}/deploy"
+      run: msbuild Offline-CDN.sln -t:rebuild -property:Configuration=Release -p:DeployOnBuild=true -p:SkipInvalidConfigurations=true -p:PackageLocation="${{ github.workspace }}/deploy"
 
   deploy:
     needs: build
