--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -36,4 +36,4 @@ jobs:
     - name: Deploy to IIS
       # run: Expand-Archive -Path '${{ github.workspace }}/deploy/Offline-CDN' -DestinationPath 'C:\Users\Romit\Documents\Deployments\Offline-CDN'
       # run: Copy-Item ${{ github.workspace }}/deploy/Offline-CDN/* C:\Users\Romit\Documents\Deployments\Offline-CDN -Recurse -Force
-      run: msdeploy -verb:sync -source:package="${{ github.workspace }}\deploy\Offline-CDN.zip" -dest:contentPath="C:\Users\Romit\Documents\Deployments\Offline-CDN"
+      run: msdeploy -verb:sync -source:package="${{ github.workspace }}\deploy\Offline-CDN.zip" -dest:auto -setParam:name=`"IIS Web Application Name`",value=Offline-CDN
