Adding Identity and Resotring old pages

--- a/CDN/appsettings.json
+++ b/CDN/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CDNContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CDN;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CDNContextConnection": "Server=192.168.2.105, 1433; User ID=SVC_CDN;Password=\"ARqwFe}~nm5.Dr\";Database=CDN;Trusted_Connection=False;TrustServerCertificate=True"
   }
 }
