--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted linux
+    runs-on: 
+      - self-hosted 
+      - linux
     steps:
       - name: Checkout
         uses: actions/checkout@v4
