--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -8,7 +8,9 @@ on:
 
 jobs:
   build:    
-    runs-on: [self-hosted windows]
+    runs-on: 
+        - self-hosted
+        - windows
 
     steps:
     - name: Checkout Branch
