--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,9 @@ jobs:
 
   deploy:
     needs: build
-    runs-on: [self-hosted windows]
+    runs-on: 
+        - self-hosted 
+        - windows
     
     steps:    
     - name: Deploy to IIS
