--- a/CDN/Dockerfile
+++ b/CDN/Dockerfile
@@ -1,11 +1,7 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-
-USER root  # Switch to root user for package installation
-RUN apt-get update && apt-get install -y curl && apt-get clean && rm -rf /var/lib/apt/lists/*
-USER app  # Switch back to the non-root user
-
+USER app
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8443
@@ -14,7 +10,6 @@ EXPOSE 8443
 EXPOSE 21
 EXPOSE 20
 EXPOSE 30000-31000
-
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
@@ -28,6 +23,10 @@ RUN dotnet build "./CDN.csproj" -c $BUILD_CONFIGURATION -o /app/build
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "./CDN.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+USER root    # Switch to root user to install curl
+RUN apt-get update && apt-get install -y curl  # Install curl
+USER app     # Switch back to the non-root user
 
 FROM base AS final
 WORKDIR /app
