--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,9 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: 
-      - self-hosted 
-      - linux
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
